--- a/style.css
+++ b/style.css
@@ -143,9 +143,11 @@ section {
   min-height: 100vh;
   display: flex;
   align-items: center;
-  background-color: #d7c7ae;
+  background-image: url("bodyspa.jpg");
   background-size: cover;
   background-position: center;
+  max-width: 100%;
+  height: auto;
 }
 
 .home .content {
@@ -438,51 +440,38 @@ section {
     display: inline-block;
   }
 
-  .header .navbar {
-    position: fixed;
-    top: 0;
-    right: -105%;
-    width: 30rem;
-    background: var(--white);
-    height: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
+  /* Navbar Styling */
+  .navbar {
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-flow: column;
-    flex-flow: column;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    z-index: 1200;
-  }
-  .header .navbar #close-navbar {
-    display: block;
-  }
-  .header .navbar.active {
-    right: 0;
+    justify-content: space-between;
+    align-items: center;
+    padding: 1rem 2rem;
   }
 
-  .header .navbar a {
-    display: block;
-    margin: 1rem 0;
-    text-align: center;
-    font-size: 3rem;
+  .logo {
+    color: white;
+    font-size: 1.5rem;
+    font-weight: bold;
   }
 
-  .home .content h3 {
-    font-size: 5.5rem;
-  }
-}
-
-@media (max-width: 450px) {
-  html {
-    font-size: 50%;
+  .nav-links {
+    display: flex;
+    list-style: none;
   }
 
-  .home .content h3 {
-    font-size: 4.5rem;
+  .nav-links li {
+    margin-left: 20px;
+  }
+
+  .nav-links li a {
+    color: white;
+    text-decoration: none;
+    font-size: 1.1rem;
+    transition: color 0.3s ease;
+  }
+
+  .nav-links li a:hover {
+    color: #f4f4f4;
   }
 }
 
